<resources>
    <string name="app_name">Alarm+</string>
    <string name="action_settings">Settings</string>
    <string name="repeat_week">Repeat Week</string>
    <string name="begin_time">Begin time：</string>
    <string name="sound_silent">Silent</string>
    <string name="sound_vibrate">Vibrate</string>
    <string name="repeat_day">Repeat Day</string>
    <string name="end_time">End time：</string>
    <string name="delete_the_alarm">Delete the alarm</string>
    <string name="title_open_source">Open source</string>
    <string name="title_settings">Settings</string>
    <string name="s_open_source">Open Source</string>
    <string name="s_about">About</string>
    <string name="s_feedback">Feedback</string>
    <string name="s_rate_us">Rate us</string>
    <string name="s_share_with_friends">Share with friends</string>
    <string name="s_similar_app">Similar app(AD)</string>
    <string name="s_remove_ad">Remove AD</string>
    <string name="title_sound">Sound</string>
    <string name="t_your_sound">Your sound</string>
    <string name="t_device_sound">Device sound</string>
    <string name="des_repeat">repeat</string>
    <string name="des_no_repeat">not repeat</string>
    <string name="des_begintime">begintime:</string>
    <string name="des_alarm_time">alarm time:</string>
    <string name="des_one_alarm">one alarm/</string>
    <string name="des_unit">minute</string>
    <string name="des_unit_hour">hour</string>
    <string name="des_endtime">endtime:</string>
    <string name="des_next_alarm">next alarm time:</string>
    <string name="btn_close">Close</string>
    <string name="btn_to_set">To Set</string>
    <string name="btn_to_pause">Pause</string>
    <string name="add_tip">Add an alarm clock</string>
    <string name="share_tip">A heath alarm clock</string>
    <string name="share_us">Share using</string>
    <string name="alarm_edit">Alarm</string>
    <string name="week_sun">S</string>
    <string name="week_mon">M</string>
    <string name="week_tue">T</string>
    <string name="week_wen">W</string>
    <string name="week_thu">T</string>
    <string name="week_fri">F</string>
    <string name="week_sat">S</string>
    <string name="edit_slient">Slient</string>
    <string name="dialog_title_confirm">Confirm</string>
    <string name="msg_delete_alarm">delete the alarm?</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="repeat_day_unit_m">M</string>
    <string name="repeat_day_unit_h">H</string>
    <string name="alarm_label">label</string>
    <string name="alarm_title_def">Drinking water time is up</string>
    <string name="suggest_title">Suggestions for Improvement</string>

    <array name="about_titles">

        <item>Loop alarm clock</item>
        <item>Time limit</item>
        <item>Set the alarm tone</item>
        <item>Set the phone music ringtones</item>
        <item>Thanks open source community</item>

    </array>

    <array name="about_descripts">

        <item>Just a few steps to add the day interval alarm clock</item>
        <item>Set the day start time, end time, interval time</item>
        <item>You can select system ringtone or mute</item>
        <item>Through the system to select the phone music as a ringtone</item>
        <item>View the open source code introduced by the software</item>

    </array>
    <string name="user_stop">Automatically shut down after 20 seconds</string>


</resources>
