<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/content"
    >


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/colorPrimary">


        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@drawable/v_click"
            android:clickable="true"
            android:onClick="onClick"
            android:scaleType="centerInside"
            android:src="@mipmap/v_icon_back" />

        <TextView
            fontPath="fonts/r-b.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/title_sound"
            android:textColor="@android:color/white"
            android:textSize="@dimen/toolbar_title_size"

            />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"

            android:paddingRight="15dp">




        </LinearLayout>



    </android.support.v7.widget.Toolbar>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="40dp"
            >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:clickable="true"
                android:onClick="onClick"
                android:id="@+id/card_opensource"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                >

                <TextView
                    fontPath="fonts/r-b.ttf"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/v_click"
                    android:clickable="true"
                    android:onClick="onClick"

                    android:text="@string/t_your_sound"
                    android:textColor="@color/btn_def"
                    android:textSize="18sp"

                    />



                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="5dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/icon_plus"
                    android:background="@drawable/v_click"
                    android:onClick="onClick"
                    android:id="@+id/btn_add"
                    />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#dddddd" />



            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_yours"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"



                />




        </LinearLayout>

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="2dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="40dp"
            >

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:clickable="true"
                android:onClick="onClick"

                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                >

                <TextView
                    fontPath="fonts/r-b.ttf"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/v_click"
                    android:clickable="true"
                    android:onClick="onClick"

                    android:text="@string/t_device_sound"
                    android:textColor="@color/btn_def"
                    android:textSize="18sp"

                    />





            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#dddddd" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"


                />




        </LinearLayout>

    </android.support.v7.widget.CardView>



</LinearLayout>