<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content"
    android:orientation="vertical"

    >


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="@drawable/v_click"
                android:clickable="true"
                android:onClick="onClick"
                android:scaleType="centerInside"
                android:src="@mipmap/v_icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontPath="fonts/r-b.ttf"
                android:layout_marginLeft="50dp"
                android:text="Alarm"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbar_title_size" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"

                android:paddingRight="15dp"
                >

                <ImageButton
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/v_click"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:scaleType="centerInside"
                    android:src="@android:drawable/ic_menu_save" />


            </LinearLayout>



        </android.support.v7.widget.Toolbar>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"

        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="@dimen/content_padding_left"
        android:paddingRight="@dimen/content_padding_left"

        >


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edit_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Label"
                        android:inputType="text"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"

                    >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/begin_time" />

                    <TextView
                        android:id="@+id/text_begin_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/v_click"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:padding="10dp"
                        android:text="10:00"
                        fontPath="fonts/r-b.ttf"
                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/checkbox_repeat_week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onClick"
                        android:text="@string/repeat_week" />

                    <LinearLayout

                        android:id="@+id/repeat_week_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:minHeight="50dp"

                        >


                        <com.dym.alarm.views.DToggleButton
                            android:id="@+id/tb_rep0"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/repeat_ele_margin"
                            android:background="@drawable/circle_select"
                            android:gravity="center"
                            android:text="S"
                            android:textOff="S"
                            android:textOn="S"

                            />

                        <com.dym.alarm.views.DToggleButton
                            android:id="@+id/tb_rep1"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/repeat_ele_margin"
                            android:background="@drawable/circle_select"
                            android:gravity="center"
                            android:text="M"
                            android:textOff="M"
                            android:textOn="M" />

                        <com.dym.alarm.views.DToggleButton
                            android:id="@+id/tb_rep2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/repeat_ele_margin"
                            android:background="@drawable/circle_select"
                            android:gravity="center"
                            android:text="T"
                            android:textOff="T"
                            android:textOn="T" />

                        <com.dym.alarm.views.DToggleButton
                            android:id="@+id/tb_rep3"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/repeat_ele_margin"
                            android:background="@drawable/circle_select"
                            android:gravity="center"
                            android:text="W"
                            android:textOff="W"
                            android:textOn="W" />

                        <com.dym.alarm.views.DToggleButton
                            android:id="@+id/tb_rep4"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/repeat_ele_margin"
                            android:background="@drawable/circle_select"
                            android:gravity="center"
                            android:text="T"
                            android:textOff="T"
                            android:textOn="T" />

                        <com.dym.alarm.views.DToggleButton
                            android:id="@+id/tb_rep5"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/repeat_ele_margin"
                            android:background="@drawable/circle_select"
                            android:gravity="center"
                            android:text="F"
                            android:textOff="F"
                            android:textOn="F"


                            />

                        <com.dym.alarm.views.DToggleButton
                            android:id="@+id/tb_rep6"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/repeat_ele_margin"
                            android:background="@drawable/circle_select"
                            android:gravity="center"
                            android:text="S"
                            android:textOff="S"
                            android:textOn="S"

                            />


                    </LinearLayout>


                </LinearLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    >

                    <!--android:drawableLeft="@drawable/quantum_ic_volume_up_grey600_36"-->
                    <!--android:drawableLeft="@drawable/quantum_ic_volume_off_grey600_36"-->
                    <TextView
                        android:id="@+id/text_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:clickable="true"


                        android:drawableLeft="@drawable/quantum_ic_volume_off_grey600_36"
                        android:gravity="center_vertical"
                        android:onClick="onClick"
                        android:text="@string/sound_silent" />


                    <CheckBox
                        android:id="@+id/checkbox_vibrate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/sound_vibrate" />


                </FrameLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/checkbox_repeat_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/repeat_day" />

                <LinearLayout
                    android:id="@+id/repeat_day_group"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"

                    android:visibility="visible">


                    <com.dym.alarm.views.DToggleButton
                        android:id="@+id/repeat_day_minute"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/repeat_ele_margin"
                        android:background="@drawable/circle_select"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:text="M"
                        android:textOff="M"
                        android:textOn="M"
                        android:textSize="@dimen/btn_text_size"
                        />

                    <com.dym.alarm.views.DToggleButton
                        android:id="@+id/repeat_day_hour"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/repeat_ele_margin"
                        android:background="@drawable/circle_select"
                        android:gravity="center"
                        android:onClick="onClick"
                        android:text="H"
                        android:textOff="H"
                        android:textOn="H"
                        android:textSize="@dimen/btn_text_size"
                        />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:id="@+id/group_end_time"
                    >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end_time" />

                    <TextView
                        android:id="@+id/text_end_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:padding="10dp"
                        android:text="10:00"
                        fontPath="fonts/r-b.ttf"
                        />


                </LinearLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="7dp"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">


            <TextView
                android:id="@+id/text_alarm_descript"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:lineSpacingExtra="2dp"
                />


        </android.support.v7.widget.CardView>



        <Button
            android:id="@+id/btn_del"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="@dimen/btn_match_margin"
            android:layout_marginRight="@dimen/btn_match_margin"
            android:background="@drawable/btn_def"
            android:onClick="onClick"
            android:text="@string/delete_the_alarm"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/btn_text_size" />



        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-2800914329604494/6936018994">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

    </ScrollView>

</LinearLayout>